2.2.6.0 (04/03/2020)
- EVOL: Add proxy support (via HTTP(S)_PROXY environment variables), thanks @iamhsa 
- FIX: dual result now display ok/total per view (not the cumulative one)

2.2.5.0 (31/01/2020)
- EVOL:
    - don't try to play requests which contains non resolved vars in path/headers/body
    - non playable request (non resolved, timeout, unreachable, invalid) are greyed out in outputs

2.2.4.0 (19/12/2019)
- EVOL: add a way to update env with command line (ex: "reqman . var:ok" )
2.2.3.0 (17/12/2019)
- FIX: save content to var was bugged (Content serialization)
2.2.2.0 (11/12/2019)
- EVOL: not append root if url has a scheme
- EVOL: switchs renamed switches (switchs is deprecated) ... thanks @mikeputnam
2.2.1.0 (20/11/2019)
- minor fixes: http version in html output is better ;-)
- evol: reqman version in meta tag in html output
2.2.0.0 (18/11/2019)
- EVOL: change http lib from httpcore to aiohttp, for the ability to send mixed case headers
2.1.8.0 (15/11/2019)
- EVOL: try request 3 times, when host is unreachable, to be really sure
2.1.7.0 (15/11/2019)
- FIX: trouble when pymethod in a dict in a body
2.1.6.0 (13/11/2019)
- EVOL: replace vars in root too
2.1.5.0 (11/11/2019)
- last version was unusable ;-)
2.1.4.0 (11/11/2019)
- FIX: bug when url return a real error 500
2.1.3.0 (05/11/2019)
- EVOL : headers can be dynamic in reqman.conf
2.1.2.0 (26/10/2019)
- EVOL : (top!) python error just fail the test (except dynamic foreach)
- test value in html tooltip is js compatible
2.1.1.0 (24/10/2019)
- EVOL: better status in console, and in html. Real test value in html tooltip
2.1.0.2 (12/10/2019)
- fix: command line on *nix works again (oupsss)
2.1.0.1 (11/10/2019)
- fix: set content-length to 0 if no body posted
2.1.0.0 (10/10/2019)
- hermetic scope between file : saved data are not shared with every files (only those in BEGIN statement, whose are global) (like reqman1)
- better resolver when mixing . and |
- better python detection var/method